--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ coverage==4.0.3
 decorator==4.0.9
 docopt==0.6.2
 gnureadline==6.3.3
+ipython==4.1.2
 ipython-genutils==0.1.0
 Jinja2==2.8
 Mako==1.0.4
@@ -36,7 +37,6 @@ repoze.lru==0.6
 simplegeneric==0.8.1
 six==1.10.0
 SQLAlchemy==1.0.12
-tox==2.3.1
 traitlets==4.2.1
 transaction==1.4.4
 translationstring==1.3
@@ -45,7 +45,6 @@ virtualenv==15.0.0
 waitress==0.8.10
 watchdog==0.8.3
 WebOb==1.5.1
-WebTest==2.0.20
 WTForms==2.1
 zope.deprecation==4.1.2
 zope.interface==4.1.3
