--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ beautifulsoup4==4.4.1
 cffi==1.5.2
 Chameleon==2.24
 colorama==0.3.7
-coverage==4.0.3
 decorator==4.0.9
 docopt==0.6.2
 gnureadline==6.3.3
@@ -27,9 +26,14 @@ py==1.4.31
 pycparser==2.14
 Pygments==2.1.3
 pyramid==1.6.1
+pyramid-chameleon==0.3
+pyramid-ipython==0.1
 pyramid-jinja2==2.6.2
 pyramid-mako==1.0.2
 pyramid-tm==0.12.1
+pytest==2.9.0
+pytest-cov==2.2.1
+pytest-watch==3.10.0
 PyYAML==3.11
 repoze.lru==0.6
 simplegeneric==0.8.1
@@ -40,7 +44,6 @@ transaction==1.4.4
 translationstring==1.3
 venusian==1.0
 virtualenv==15.0.0
-waitress==0.8.10
 watchdog==0.8.3
 WebOb==1.5.1
 WTForms==2.1
