--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ Chameleon==2.24
 colorama==0.3.7
 decorator==4.0.9
 docopt==0.6.2
-gnureadline==6.3.3
 Jinja2==2.8
 Mako==1.0.4
 Markdown==2.6.6
@@ -27,15 +26,12 @@ pycparser==2.14
 Pygments==2.1.3
 pyramid==1.6.1
 pyramid-chameleon==0.3
-pyramid-ipython==0.1
 pyramid-jinja2==2.6.2
 pyramid-mako==1.0.2
 pyramid-tm==0.12.1
-pytest==2.9.0
-pytest-cov==2.2.1
-pytest-watch==3.10.0
 PyYAML==3.11
 repoze.lru==0.6
+requests==2.9.1
 simplegeneric==0.8.1
 six==1.10.0
 SQLAlchemy==1.0.12
@@ -44,6 +40,7 @@ transaction==1.4.4
 translationstring==1.3
 venusian==1.0
 virtualenv==15.0.0
+waitress==0.8.10
 watchdog==0.8.3
 WebOb==1.5.1
 WTForms==2.1
