--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ pyramid-jinja2==2.6.2
 pyramid-mako==1.0.2
 pyramid-tm==0.12.1
 pytest==2.9.0
+pytest-cov==2.2.1
+pytest-watch==3.10.0
 PyYAML==3.11
 repoze.lru==0.6
 requests==2.9.1
