--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Chameleon==2.24
 colorama==0.3.7
 decorator==4.0.9
 docopt==0.6.2
+gnureadline==6.3.3
 Jinja2==2.8
 Mako==1.0.4
 Markdown==2.6.6
@@ -29,6 +30,7 @@ pyramid-chameleon==0.3
 pyramid-jinja2==2.6.2
 pyramid-mako==1.0.2
 pyramid-tm==0.12.1
+pytest==2.9.0
 PyYAML==3.11
 repoze.lru==0.6
 requests==2.9.1
